--- a/advent_of_code/lib/dune
+++ b/advent_of_code/lib/dune
@@ -1,4 +1,4 @@
 (library
  (public_name advent_of_code)
- (modules parse)
- (libraries base angstrom stdio))
+ (modules day01)
+ (libraries angstrom core))
