--- a/advent_of_code/lib/dune
+++ b/advent_of_code/lib/dune
@@ -1,4 +1,4 @@
 (library
+ (name advent_of_code)
  (public_name advent_of_code)
- (modules day01)
- (libraries angstrom core))
+ (libraries year2022))
