refactor(2023.05-haskell): solve part one with data-interval
Thanks for the tips:
https://github.com/mstksg/advent-of-code-2023/blob/master/reflections/day05.md

--- a/package.yaml
+++ b/package.yaml
@@ -43,6 +43,7 @@ library:
     - conduit
     - containers
     - cryptonite
+    - data-interval
     - data-ordlist
     - dlist
     - extra
@@ -441,6 +442,7 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2023.Day05
     dependencies:
+      - data-interval
       - linear
 _benchmark: &benchmark
   ghc-options:
