feat(2023.06-haskell): brute force Part Two

--- a/package.yaml
+++ b/package.yaml
@@ -450,6 +450,7 @@ executables:
     dependencies:
       - composition
       - extra
+      - fast-digits
 _benchmark: &benchmark
   ghc-options:
     - -threaded
