build: nix flake update

--- a/.envrc
+++ b/.envrc
@@ -4,4 +4,4 @@ watch_file \
     flake.nix \
     nix/*.nix \
     package.yaml
-eval "$(nix print-dev-env --max-jobs "$(nproc --all | awk '{ $1 /= 2; print $1 - ($1 % 1) }')" --profile "$(direnv_layout_dir)/flake-profile")"
+use flake
