feat(2017.03-haskell): solve Part Two

--- a/package.yaml
+++ b/package.yaml
@@ -201,6 +201,8 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2017.Day03
     dependencies:
+      - containers
+      - extra
       - linear
   aoc-2017-day04:
     <<: *executable
