feat(2017.06-haskell): solve Part One

--- a/package.yaml
+++ b/package.yaml
@@ -214,6 +214,9 @@ executables:
     dependencies:
       - extra
       - zippers
+  aoc-2017-day06:
+    <<: *executable
+    main: AdventOfCode.Year2017.Day06
   aoc-2018-day01:
     <<: *executable
     main: AdventOfCode.Year2018.Day01
