--- a/package.yaml
+++ b/package.yaml
@@ -499,6 +499,9 @@ executables:
     main: AdventOfCode.Year2023.Day06
     dependencies:
       - extra
+  aoc-2024-day01:
+    <<: *executable
+    main: AdventOfCode.Year2024.Day01
 _benchmark: &benchmark
   ghc-options:
     - -threaded
