--- a/package.yaml
+++ b/package.yaml
@@ -511,6 +511,9 @@ executables:
     main: AdventOfCode.Year2024.Day01
     dependencies:
       - extra
+  aoc-2024-day02:
+    <<: *executable
+    main: AdventOfCode.Year2024.Day02
 _benchmark: &benchmark
   ghc-options:
     - -threaded
