--- a/package.yaml
+++ b/package.yaml
@@ -531,6 +531,11 @@ executables:
     main: AdventOfCode.Year2024.Day05
     dependencies:
       - extra
+  aoc-2024-day06:
+    <<: *executable
+    main: AdventOfCode.Year2024.Day06
+    dependencies:
+      - linear
 _benchmark: &benchmark
   ghc-options:
     - -threaded
