--- a/package.yaml
+++ b/package.yaml
@@ -362,6 +362,11 @@ executables:
     main: AdventOfCode.Year2020.Day12
     dependencies:
       - linear
+  aoc-2020-day13:
+    <<: *executable
+    main: AdventOfCode.Year2020.Day13
+    dependencies:
+      - extra
   aoc-2020-day14:
     <<: *executable
     main: AdventOfCode.Year2020.Day14
