refactor(2016.14-haskell): stack monads

--- a/package.yaml
+++ b/package.yaml
@@ -17,7 +17,9 @@ dependencies:
   - bytestring
   - comonad
   - containers
+  - extra
   - lens
+  - monad-logger
   - parsers
   - split
   - tasty
