--- a/package.yaml
+++ b/package.yaml
@@ -67,6 +67,7 @@ library:
     - parser-combinators
     - pointless-fun
     - recursion-schemes
+    - relude
     - safe
     - scientific
     - semirings
@@ -394,6 +395,7 @@ executables:
     main: AdventOfCode.Year2020.Day09
     dependencies:
       - mtl
+      - relude
   aoc-2020-day10:
     <<: *executable
     main: AdventOfCode.Year2020.Day10
