refactor(2017.03-haskell): adopt advent-of-code-api

--- a/package.yaml
+++ b/package.yaml
@@ -238,8 +238,7 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2017.Day03
     dependencies:
-      - containers
-      - extra
+      - infinite-list
       - linear
   aoc-2017-day04:
     <<: *executable
