--- a/package.yaml
+++ b/package.yaml
@@ -345,6 +345,7 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2019.Day12
     dependencies:
+      - infinite-list
       - linear
   aoc-2020-day01:
     <<: *executable
