--- a/package.yaml
+++ b/package.yaml
@@ -297,6 +297,8 @@ executables:
   aoc-2019-day03:
     <<: *executable
     main: AdventOfCode.Year2019.Day03
+    dependencies:
+      - linear
   aoc-2019-day04:
     <<: *executable
     main: AdventOfCode.Year2019.Day04
