--- a/package.yaml
+++ b/package.yaml
@@ -293,6 +293,7 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2019.Day02
     dependencies:
+      - pointless-fun
       - vector
   aoc-2019-day03:
     <<: *executable
