refactor(2020.16-haskell): adopt advent-of-code-api

--- a/package.yaml
+++ b/package.yaml
@@ -438,7 +438,9 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2020.Day16
     dependencies:
+      - infinite-list
       - linear
+      - pointless-fun
   aoc-2020-day17:
     <<: *executable
     main: AdventOfCode.Year2020.Day17
