--- a/package.yaml
+++ b/package.yaml
@@ -599,6 +599,9 @@ executables:
   aoc-2024-day07:
     <<: *executable
     main: AdventOfCode.Year2024.Day07
+  aoc-2025-day01:
+    <<: *executable
+    main: AdventOfCode.Year2025.Day01
 _benchmark: &benchmark
   ghc-options:
     - -threaded
