--- a/package.yaml
+++ b/package.yaml
@@ -607,6 +607,9 @@ executables:
     main: AdventOfCode.Year2025.Day02
     dependencies:
       - fast-digits
+  aoc-2025-day03:
+    <<: *executable
+    main: AdventOfCode.Year2025.Day03
 _benchmark: &benchmark
   ghc-options:
     - -threaded
