--- a/package.yaml
+++ b/package.yaml
@@ -610,6 +610,8 @@ executables:
   aoc-2025-day03:
     <<: *executable
     main: AdventOfCode.Year2025.Day03
+    dependencies:
+      - vector
 _benchmark: &benchmark
   ghc-options:
     - -threaded
