--- a/package.yaml
+++ b/package.yaml
@@ -622,6 +622,9 @@ executables:
     main: AdventOfCode.Year2025.Day05
     dependencies:
       - data-interval
+  aoc-2025-day06:
+    <<: *executable
+    main: AdventOfCode.Year2025.Day06
 _benchmark: &benchmark
   ghc-options:
     - -threaded
