--- a/package.yaml
+++ b/package.yaml
@@ -56,6 +56,7 @@ library:
     - cryptohash-md5
     - data-interval
     - data-ordlist
+    - diagrams-lib
     - dlist
     - fast-digits
     - finitary
@@ -641,6 +642,7 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2025.Day09
     dependencies:
+      - diagrams-lib
       - linear
 _benchmark: &benchmark
   ghc-options:
